[gd_scene load_steps=15 format=4 uid="uid://tt44fmqr0nwl"]

[ext_resource type="Script" uid="uid://cdteteceyet85" path="res://Scripts/home_base.gd" id="1_aerks"]
[ext_resource type="Texture2D" uid="uid://dkpbl1ksdeqnp" path="res://Assets/textures/parchmentAncient.png" id="2_ugu5h"]
[ext_resource type="Texture2D" uid="uid://bih25lrr7guhs" path="res://Assets/spritesheet_default.png" id="3_lxpwt"]
[ext_resource type="Texture2D" uid="uid://drkrsjrsyatcu" path="res://Assets/spritesheet_default-sheet_highlight.png" id="4_ugu5h"]
[ext_resource type="Texture2D" uid="uid://c7tp48jey81by" path="res://Assets/Sprite_camp.png" id="5_g7klc"]
[ext_resource type="Texture2D" uid="uid://b4b2hbaplnajf" path="res://Assets/Sprite_camp_highlight.png" id="6_s426e"]
[ext_resource type="FontFile" uid="uid://bpqrym8b16w0s" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="7_s426e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ykk3q"]
texture = ExtResource("3_lxpwt")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
0:3/0 = 0
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
7:3/0 = 0
7:2/0 = 0
7:1/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
7:5/0 = 0
7:4/0 = 0
7:6/0 = 0
7:7/0 = 0
8:7/0 = 0
8:6/0 = 0
0:4/0 = 0
0:5/0 = 0
1:8/0 = 0
0:8/0 = 0
0:7/0 = 0
0:6/0 = 0
2:8/0 = 0
5:9/0 = 0

[sub_resource type="TileSet" id="TileSet_d8qm4"]
sources/0 = SubResource("TileSetAtlasSource_ykk3q")

[sub_resource type="AtlasTexture" id="AtlasTexture_aerks"]
atlas = ExtResource("3_lxpwt")
region = Rect2(131, 579, 58, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7klc"]
atlas = ExtResource("4_ugu5h")
region = Rect2(131, 579, 58, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugu5h"]
atlas = ExtResource("3_lxpwt")
region = Rect2(331, 591, 42, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxpwt"]
atlas = ExtResource("4_ugu5h")
region = Rect2(331, 591, 42, 46)

[sub_resource type="LabelSettings" id="LabelSettings_2snwx"]
font = ExtResource("7_s426e")
outline_size = 2
outline_color = Color(0, 1, 0, 1)
shadow_size = 3
shadow_color = Color(1, 0, 0, 1)

[node name="HomeBase" type="Node2D"]
script = ExtResource("1_aerks")

[node name="ParchmentAncient" type="Sprite2D" parent="."]
position = Vector2(614, 335)
scale = Vector2(1.36523, 1)
texture = ExtResource("2_ugu5h")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AABNACoAAAAGAAgAAAAcAAwAAAACAAUAAAAfAA0AAAACAAUAAAAbABAAAAACAAUAAAAdABEAAAACAAUAAAAZAA0AAAACAAUAAAAZABEAAAACAAUAAAAXAAcAAAAFAAgAAAAHAAwAAAAEAAUAAAAKAAsAAAAEAAUAAAANAA8AAAABAAIAAAAJAA8AAAAAAAIAAAAGABAAAAAEAAUAAAAJABIAAAAEAAUAAAANABIAAAAEAAUAAAAOAAsAAAAEAAUAAAAQAA4AAAAEAAUAAAAEAAcAAAACAAEAAAANAAYAAAAEAAcAAAATAAcAAAAGAAkAAAAXAAUAAAAFAAgAAAAUAAQAAAAFAAgAAAAFAAEAAAACAAMAAAAHAAEAAAACAAMAAAAJAAEAAAACAAMAAAALAAEAAAACAAMAAAANAAEAAAACAAMAAAAPAAEAAAACAAMAAAARAAEAAAACAAMAAAAXAAEAAAACAAMAAAAZAAEAAAACAAMAAAAbAAEAAAACAAMAAAAdAAEAAAACAAMAAAAfAAEAAAACAAMAAAAhAAEAAAACAAMAAAAjAAEAAAACAAMAAAAmAAYAAAACAAMAAFAmAAgAAAACAAMAAFAmAA4AAAACAAMAAFAmABIAAAACAAMAAFAmAAQAAAACAAMAAFAmABAAAAACAAMAAFAPABYAAAACAAMAADARABYAAAACAAMAADAXABYAAAACAAMAADAZABYAAAACAAMAADAbABYAAAACAAMAADAdABYAAAACAAMAADAfABYAAAACAAMAADAhABYAAAACAAMAADAjABYAAAACAAMAADAmABQAAAACAAMAAFANABYAAAACAAMAADALABYAAAACAAMAADAJABYAAAACAAMAADAHABYAAAACAAMAADAFABYAAAACAAMAADADABYAAAACAAMAADADAAEAAAACAAMAAAAiABIAAAAGAAgAAAABAAQAAAACAAMAAGABAAYAAAACAAMAAGABAAgAAAACAAMAAGABAA0AAAACAAMAAGABAA8AAAACAAMAAGABABEAAAACAAMAAGABABMAAAACAAMAAGAVAAEAAAACAAMAAAAVABYAAAACAAMAADATABYAAAACAAMAADATAAEAAAACAAMAAAA=")
tile_set = SubResource("TileSet_d8qm4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpgradeStation" type="TextureButton" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 950.0
offset_top = 182.0
offset_right = 1008.0
offset_bottom = 240.0
scale = Vector2(2, 2)
texture_normal = SubResource("AtlasTexture_aerks")
texture_pressed = SubResource("AtlasTexture_aerks")
texture_hover = SubResource("AtlasTexture_g7klc")

[node name="Exit" type="TextureButton" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 14.0
offset_top = 394.0
offset_right = 56.0
offset_bottom = 440.0
rotation = -1.5708
scale = Vector2(2, 2)
texture_normal = SubResource("AtlasTexture_ugu5h")
texture_pressed = SubResource("AtlasTexture_ugu5h")
texture_hover = SubResource("AtlasTexture_lxpwt")

[node name="Exit2" type="TextureButton" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 1273.0
offset_top = 306.0
offset_right = 1315.0
offset_bottom = 352.0
rotation = 1.5708
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_ugu5h")
texture_pressed = SubResource("AtlasTexture_ugu5h")
texture_hover = SubResource("AtlasTexture_lxpwt")

[node name="Camp" type="TextureButton" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 588.0
offset_top = 335.0
offset_right = 652.0
offset_bottom = 399.0
scale = Vector2(3, 3)
texture_normal = ExtResource("5_g7klc")
texture_pressed = ExtResource("5_g7klc")
texture_hover = ExtResource("6_s426e")

[node name="Label_Parley_JEE" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 179.0
offset_top = 120.0
offset_right = 371.0
offset_bottom = 155.0
text = "Parley-JEE: "
label_settings = SubResource("LabelSettings_2snwx")

[node name="Label_Score" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 179.0
offset_top = 163.0
offset_right = 371.0
offset_bottom = 198.0
text = "Score: "
label_settings = SubResource("LabelSettings_2snwx")

[connection signal="pressed" from="CanvasLayer/Control/UpgradeStation" to="." method="_on_upgrade_station_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Exit2" to="." method="_on_exit2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Camp" to="." method="_on_camp_pressed"]
